--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "html-react-parser": "^3.0.4",
+    "node-html-parser": "^6.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
