--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "node-html-parser": "^6.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-share": "^4.4.0",
+    "react-web-share": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
